# job-board

./: .env.sample  LICENSE  README.md  dev_run.sh  manage.py  pyproject.toml
app/blueprints/: __init__.py
app/blueprints/account/: views.py
app/config/: config.py
app/crud/: account.py  blog.py  public.py
app/db/: base.py
app/models/: blog.py  profiles.py  user.py
app/utils/: dep.py  email.py  security.py
requirements/: common.txt
