[tool.poetry]
name = "job-board"
version = "0.1.0"
description = "A Job listing portal for job seekers"
authors = ["vendari12 <www.vendari23@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.75.0"
FastAPI-SQLAlchemy = "^0.2.1"
fastapi-jwt-auth = "^0.5.0"
Pillow = "^9.0.1"
rq = "^1.10.1"
psycopg2-binary = "^2.9.3"
flake8 = "^4.0.1"
typer = "^0.4.0"
opentelemetry-instrumentation-fastapi = "^0.28b1"
opentelemetry-instrumentation-redis = "^0.28b1"
opentelemetry-instrumentation-sqlalchemy = "^0.28b1"
alembic = "^1.7.6"
itsdangerous = "^2.1.0"
sqlalchemy_mptt = "^0.2.5"
uvicorn = "^0.17.5"
starlette-prometheus = "^0.9.0"
opentelemetry-sdk = "^1.9.1"
passlib = "^1.7.4"
Jinja2 = "^3.0.3"
python-dotenv = "^0.19.2"


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
